iptables-rule
# Generated by iptables-save v1.6.1 on Tue Mar  3 15:28:13 2020
#*nat
#:POSTROUTING ACCEPT [0:0] 
# Allow traffic from OpenVPN client to wlp11s0 (change to the interface you discovered!)
#-A POSTROUTING -s 10.8.0.0/24 -o ens160 -j MASQUERADE
*filter
:INPUT DROP [91:29658]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [869:151486]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -s 127.0.0.1 -j ACCEPT
-A INPUT -s 10.68.2.55 -j ACCEPT
-A INPUT -s 10.68.2.56 -j ACCEPT
-A INPUT -s 10.68.2.57 -j ACCEPT
-A INPUT -s 10.68.2.58 -j ACCEPT
-A INPUT -s 10.68.2.164 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
#-A FORWARD -p icmp -j DROP
-A FORWARD -p icmp -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT

################################### ACCEPT ANY ANY #################################################

-A FORWARD -s 10.8.0.6/32 -m comment --comment "TuyenDD" -j ACCEPT
-A FORWARD -s 10.8.0.14/32 -m comment --comment "kiennt2" -j ACCEPT

#-A FORWARD -s 10.8.0.6/32 -d 10.68.2.1/32 -p tcp -m multiport --dports 1518,1519 -m comment --comment "TuyenDD" -j ACCEPT

################################### SERVER MISA EWAY ###############################################
#-A FORWARD -s 10.8.0.46/32 -d 10.68.10.10/32 -p tcp -m tcp -m comment --comment "HungTT" -j ACCEPT
#-A FORWARD -s 10.8.0.41/32 -d 10.68.10.10/32 -p tcp -m tcp -m comment --comment "kien" -j ACCEPT
################################### SERVER MISA KALAPA #############################################
#-A FORWARD -s 10.8.0.41/32 -d 10.68.2.164/32 -p tcp -m tcp --dport 22 -m comment --comment "kiennt2" -j ACCEPT


################################### SERVER MISA ADFLEX #############################################
#-A FORWARD -s 10.8.0.14/32 -d 10.68.10.14/32 -p tcp -m tcp -m comment --comment "SonDN OP" -j ACCEPT

################################### SERVER BACKEND-CC CRAWLER #############################################
#-A FORWARD -s 10.8.0.70/32 -d 10.68.10.50/32 -p tcp -m tcp -m comment --comment "nambp" -j ACCEPT

#-A FORWARD -s 10.8.0.12/32 -d 10.68.2.56/32 -p tcp -m tcp --dport 22 -j ACCEPT
################################### VLAN MNGT EWAY #################################################
#-A FORWARD -s 10.8.0.14/32 -d 10.68.2.46/32 -p tcp -m multiport --dports 22,80,443,8000 -m comment --comment "SonDN" -j ACCEPT
#-A FORWARD -s 10.8.0.14/32 -d 10.68.2.47/32 -p tcp -m multiport --dports 22,80,443,8000 -m comment --comment "SonDN" -j ACCEPT
#-A FORWARD -s 10.8.0.14/32 -d 10.68.2.1/32 -p tcp -m tcp --dport 1518 -m comment --comment "SonDN" -j ACCEPT
#-A FORWARD -s 10.8.0.14/32 -d 10.68.2.1/32 -p tcp -m multiport --dports 1518,1519 -m comment --comment "SonDN" -j ACCEPT
#-A FORWARD -s 10.8.0.50/32 -d 10.68.2.46/32 -p tcp -m multiport --dport 80,443,8000 -m comment --comment "PhuongND" -j ACCEPT
#-A FORWARD -s 10.8.0.50/32 -d 10.68.2.47/32 -p tcp -m multiport --dport 80,443,8000 -m comment --comment "PhuongND" -j ACCEPT
################################### DROP ANY ANY ###################################################

-A FORWARD -p tcp -m multiport --dports 80,443,8000,22,3389,1518,1519 -j DROP

####################################################################################################
COMMIT
# Completed on Tue Mar  3 15:28:13 2020
